--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
 <section>
     <div class="container">
         <div class="row">
+            <div class="col-lg-12">
             <h1 class="section-heading">Contact Us.</h1>
 
             <div class="col-lg-4">
@@ -171,6 +172,7 @@
 
             <!--Start Contact form -->
 
+        </div>
         </div>
 
     </div>
